Special page for poll and voter list creation
This will hopefully be easier than editing XML files and running
crazy-long queries.

Change-Id: I6154b3f3141b094984e6c61a5228e2f938922952

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -47,6 +47,7 @@
 	"securepoll-bot": "Sorry, accounts with the bot flag are not allowed to vote in this election.",
 	"securepoll-not-in-group": "Only members of the \"$1\" group can vote in this election.",
 	"securepoll-not-in-list": "Sorry, you are not in the predetermined list of users authorized to vote in this election.",
+	"securepoll-in-exclude-list": "Sorry, you are not authorized to vote in this election.",
 	"securepoll-custom-unqualified": "$1",
 	"securepoll-list-title": "List votes: $1",
 	"securepoll-header-timestamp": "Time",
@@ -91,12 +92,14 @@
 	"securepoll-language-label": "Select language:",
 	"securepoll-submit-select-lang": "Translate",
 	"securepoll-entry-text": "Below is the list of polls.",
+	"securepoll-entry-createpoll": "Create a new poll",
 	"securepoll-header-title": "Name",
 	"securepoll-header-start-date": "Start date",
 	"securepoll-header-end-date": "End date",
 	"securepoll-subpage-vote": "Vote",
 	"securepoll-subpage-translate": "Translate",
 	"securepoll-subpage-list": "List",
+	"securepoll-subpage-votereligibility": "Voter Eligibility",
 	"securepoll-subpage-dump": "Dump",
 	"securepoll-subpage-tally": "Tally",
 	"securepoll-tally-title": "Tally: $1",
@@ -117,5 +120,117 @@
 	"securepoll-average-score": "Average score",
 	"securepoll-round": "Round $1",
 	"securepoll-spoilt": "(Spoilt)",
-	"securepoll-exhausted": "(Exhausted)"
+	"securepoll-exhausted": "(Exhausted)",
+	"securepoll-htmlform-date-placeholder": "YYYY-MM-DD",
+	"securepoll-htmlform-date-invalid": "The value you specified is not a recognized date. Try using YYYY-MM-DD format.",
+	"securepoll-htmlform-date-toolow": "The value you specified is before the earliest allowed date of $1.",
+	"securepoll-htmlform-date-toohigh": "The value you specified is after the latest allowed date of $1.",
+	"securepoll-htmlform-daterange-relative-layout": "Start on $1 and run for $2 days",
+	"securepoll-htmlform-daterange-absolute-layout": "Start on $1 and end on $2",
+	"securepoll-htmlform-daterange-days-badoption": "The value you specified for the number of days to run is not a valid option.",
+	"securepoll-htmlform-daterange-days-invalid": "The value you specified for the number of days to run is not an integer.",
+	"securepoll-htmlform-daterange-days-toolow": "The value you specified for the number of days to run is below the minimum of {{PLURAL:$1|$1}}.",
+	"securepoll-htmlform-daterange-days-toohigh": "The value you specified for the number of days to run is above the maximum of {{PLURAL:$1|$1}}.",
+	"securepoll-htmlform-daterange-end-before-start": "The end date given is before the start date.",
+	"securepoll-htmlform-daterange-error-partial": "Both date fields must be filled or left empty.",
+	"securepoll-htmlform-radiorange-missing-message": "Please specify a value for column $1",
+	"securepoll-create-title": "{{int:securepoll}}: Create poll",
+	"securepoll-create-action": "Create poll",
+	"securepoll-create-created": "{{int:securepoll}}: Poll created",
+	"securepoll-create-created-text": "Your poll has been created.",
+	"securepoll-create-label-election_title": "Poll Title:",
+	"securepoll-create-label-wiki": "For wiki:",
+	"securepoll-create-option-wiki-this_wiki": "This wiki",
+	"securepoll-create-option-wiki-all_wikis": "All wikis",
+	"securepoll-create-option-wiki-other_wiki": "Other specific wiki",
+	"securepoll-create-label-election_primaryLang": "Primary Language:",
+	"securepoll-create-label-election_dates": "Election Dates:",
+	"securepoll-create-layout-election_dates": "Start on $1 (at 00:00 UTC) and run for $2 days",
+	"securepoll-create-label-election_disallow-change": "Prevent voters from changing their votes",
+	"securepoll-create-label-election_return-url": "Return-to URL:",
+	"securepoll-create-label-election_type": "Poll type:",
+	"securepoll-create-label-election_crypt": "Encryption:",
+	"securepoll-create-label-property_admins": "Admins:",
+	"securepoll-create-label-shuffle_questions": "Shuffle questions on the voting page.",
+	"securepoll-create-label-shuffle_options": "Shuffle options on the voting page.",
+	"securepoll-create-label-must_rank_all": "Require that all options be ranked.",
+	"securepoll-create-label-must_answer_all": "Require that all options be answered.",
+	"securepoll-create-label-gpg_encrypt_key": "GPG encryption key",
+	"securepoll-create-label-gpg_sign_key": "GPG signing key",
+	"securepoll-create-label-questions": "== Questions ==",
+	"securepoll-create-questions-row-legend": "Question",
+	"securepoll-create-label-questions-question": "Question text:",
+	"securepoll-create-label-questions-add": "Add another question",
+	"securepoll-create-label-questions-delete": "Delete question",
+	"securepoll-create-label-min_score": "Minimum score:",
+	"securepoll-create-label-max_score": "Maximum score:",
+	"securepoll-create-label-default_score": "Default score:",
+	"securepoll-create-label-column_order": "Score column ordering",
+	"securepoll-create-option-column_order-asc": "Ascending",
+	"securepoll-create-option-column_order-desc": "Descending",
+	"securepoll-create-label-column_label_msgs": "Use custom messages for column labels",
+	"securepoll-create-label-questions-option": "=== Options ===",
+	"securepoll-create-label-options-option": "Option text:",
+	"securepoll-create-label-options-add": "Add another option",
+	"securepoll-create-label-options-delete": "Delete option",
+	"securepoll-create-label-option-name": "Option name:",
+	"securepoll-create-option-election_type-approval+plurality": "Approval vote",
+	"securepoll-create-option-election_type-preferential+schulze": "Schulze vote",
+	"securepoll-create-option-election_type-choose+plurality": "Plurality",
+	"securepoll-create-option-election_type-radio-range+plurality": "Range voting (plurality)",
+	"securepoll-create-option-election_type-radio-range+histogram-range": "Range voting (histogram range)",
+	"securepoll-create-option-election_type-radio-range-comment+plurality": "Range voting (plurality) with comment",
+	"securepoll-create-option-election_type-radio-range-comment+histogram-range": "Range voting (histogram range) with comment",
+	"securepoll-create-option-election_crypt-none": "No encryption",
+	"securepoll-create-option-election_crypt-gpg": "GPG",
+	"securepoll-create-invalid-username": "The specified user name is not valid",
+	"securepoll-create-user-does-not-exist": "The specified user does not exist",
+	"securepoll-create-fail-bad-dblist": "The specified wiki or wiki list is not valid",
+	"securepoll-create-duplicate-title": "The given poll title has already been used on $1",
+	"securepoll-votereligibility-title": "Voter eligibility configuration",
+	"securepoll-votereligibility-redirect": "Voter eligibility for this election must be configured on $1",
+	"securepoll-votereligibility-redirect-otherwiki": "the main wiki",
+	"securepoll-votereligibility-basic": "'''Basic options'''",
+	"securepoll-votereligibility-basic-info": "Basic options are checked when the user attempts to vote.",
+	"securepoll-votereligibility-invalid-list": "The given voter eligibility list is not known.",
+	"securepoll-votereligibility-list-is-processing": "The given voter eligibility list is being automatically populated, and cannot be edited now.",
+	"securepoll-votereligibility-label-min_edits": "Minimum edits:",
+	"securepoll-votereligibility-label-max_registration": "Registered before:",
+	"securepoll-votereligibility-label-not_blocked": "Must not be blocked",
+	"securepoll-votereligibility-label-not_centrally_blocked": "Must not be blocked on too many attached wikis",
+	"securepoll-votereligibility-label-central_block_threshold": "Central block threshold",
+	"securepoll-votereligibility-label-not_bot": "Must not be flagged as a bot",
+	"securepoll-votereligibility-lists": "'''Voter lists'''",
+	"securepoll-votereligibility-lists-info": "Eligible voters may also be listed explicitly. There are three lists:\n* The ''{{int:securepoll-votereligibility-list-voter}}'' is a list of voters who are allowed to vote, if they also meet the basic requirements defined above. This list is often populated automatically.\n* The ''{{int:securepoll-votereligibility-list-include}}'' is a list of voters who are allowed to vote regardless of the basic requirements or the eligibility list.\n* The ''{{int:securepoll-votereligibility-list-exclude}}'' is a list of voters who are not allowed to vote, regardless of any other lists.",
+	"securepoll-votereligibility-list-voter": "Eligibility list",
+	"securepoll-votereligibility-list-include": "Override list",
+	"securepoll-votereligibility-list-exclude": "Exclude list",
+	"securepoll-votereligibility-label-inuse": "This list is in use",
+	"securepoll-votereligibility-label-notinuse": "This list is not in use",
+	"securepoll-votereligibility-label-processing": "This list is being constructed ($1% complete)",
+	"securepoll-votereligibility-label-edit": "Edit list",
+	"securepoll-votereligibility-label-clear": "Remove list",
+	"securepoll-votereligibility-label-populate": "Populate list automatically",
+	"securepoll-votereligibility-label-edits_before": "Require a minimum number of edits before a date",
+	"securepoll-votereligibility-label-edits_before_count": "Minimum edit count",
+	"securepoll-votereligibility-label-edits_before_date": "Before date",
+	"securepoll-votereligibility-label-edits_between": "Require a minimum number of edits between two dates",
+	"securepoll-votereligibility-label-edits_between_count": "Minimum edit count",
+	"securepoll-votereligibility-label-edits_between_dates": "Between dates",
+	"securepoll-votereligibility-layout-edits_between_dates": "Between $1 and $2",
+	"securepoll-votereligibility-label-exclude_groups": "Exclude users in these groups",
+	"securepoll-votereligibility-label-include_groups": "Include users in these groups, regardless of edits or other groups",
+	"securepoll-votereligibility-label-names": "User names",
+	"securepoll-votereligibility-action": "Save configuration",
+	"securepoll-votereligibility-fail-nothing-to-process": "Automatic population of the {{int:securepoll-votereligibility-list-voter}} was requested, but all filters were left blank.",
+	"securepoll-votereligibility-edit-title": "Voter list editing: $1",
+	"securepoll-votereligibility-edit-header": "Enter user names for the list in the text field below, one per line. A user on one specific wiki may be identified by appending the name with '@' followed by the project name; for example, User:Example on the English Wikipedia could be specified as \"Example@enwiki\".\n\nUser names are looked up when this form is submitted, and users that do not exist are silently ignored. Invalid user names are also silently ignored.",
+	"securepoll-votereligibility-edit-action": "Save list",
+	"securepoll-votereligibility-saved": "{{int:securepoll}}: Saved",
+	"securepoll-votereligibility-saved-text": "Your changes have been saved.",
+	"securepoll-votereligibility-clear-title": "Voter list removal: $1",
+	"securepoll-votereligibility-cleared": "{{int:securepoll}}: Cleared",
+	"securepoll-votereligibility-cleared-text": "The $1 has been cleared and will not be used by the poll.",
+	"right-securepoll-create-poll": "Create polls",
+	"action-securepoll-create-poll": "create polls"
 }
