--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -40,6 +40,8 @@
 	"securepoll-too-new": "Parameters:\n* $1 - the required registration date\n* $2 - the actual registration date\n* $3 - the required registration time\n* $4 - the actual registration time",
 	"securepoll-blocked-centrally": "Used as error message. Parameters\n* $1 - number of wikis",
 	"securepoll-not-in-group": "Used as error message. Parameters:\n* $1 - name of MediaWiki group which voters need to be in",
+	"securepoll-not-in-list": "Used as error message.",
+	"securepoll-in-exclude-list": "Used as error message.",
 	"securepoll-custom-unqualified": "{{notranslate}}\nUsed as fatal error message. Parameters:\n* $1 - error message",
 	"securepoll-list-title": "Used as page title and as page subtitle. Parameters:\n* $1 - title of the election, or the string \"[title]\"",
 	"securepoll-header-timestamp": "{{Identical|Time}}",
@@ -84,11 +86,125 @@
 	"securepoll-subpage-vote": "Link text to a sub page in the SecurePoll extension where users can vote.\n{{Identical|Vote}}",
 	"securepoll-subpage-translate": "Link text to a sub page in the SecurePoll extension where users can translate poll related texts.\n{{Identical|Translate}}",
 	"securepoll-subpage-list": "Link text to a sub page in the SecurePoll extension where users can list poll information.\n{{Identical|List}}",
+	"securepoll-subpage-votereligibility": "Link text to a sub page in the SecurePoll extension where users can configure voter eligibility.",
 	"securepoll-subpage-dump": "Link text to a sub page in the SecurePoll extension where users can dump results.",
 	"securepoll-subpage-tally": "Link text to a sub page in the SecurePoll extension where users can tally.",
 	"securepoll-tally-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"",
 	"securepoll-tally-upload-error": "Used as error message. Parameters:\n* $1 - error message",
 	"securepoll-round": "Column header for tables on tallies which take place over multiple rounds.\n\nParameters:\n* $1 - roman numeral (I, II, III, IV, ...)",
 	"securepoll-spoilt": "Row label for counting ballots which were spoilt, that is not correctly filled in or indecipherable.",
-	"securepoll-exhausted": "Row label for counting ballots which have been exhausted in a multi-round counting system"
+	"securepoll-exhausted": "Row label for counting ballots which have been exhausted in a multi-round counting system",
+	"securepoll-entry-createpoll": "Label for the \"create a new poll\" link on Special:SecurePoll.",
+	"securepoll-htmlform-date-placeholder": "Used as initial placeholder text in \"date\" input boxes. This date MUST be formatted in the https://en.wikipedia.org/wiki/ISO_8601 format. You can localise the letters to your language or script, but you should not change the format.",
+	"securepoll-htmlform-date-invalid": "Used as error message in HTML forms. This date MUST be formatted in the https://en.wikipedia.org/wiki/ISO_8601 format. You can localise the letters to your language or script, but you should not change the format.\n\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Securepoll-htmlform-date-placeholder}}\n* {{msg-mw|Securepoll-htmlform-date-toolow}}\n* {{msg-mw|Securepoll-htmlform-date-toohigh}}\n* {{msg-mw|Htmlform-required}}",
+	"securepoll-htmlform-date-toolow": "Used as error message in HTML forms. Parameters:\n* $1 - minimum date\nSee also:\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-required}}\n* {{msg-mw|Securepoll-htmlform-date-invalid}}\n* {{msg-mw|Securepoll-htmlform-date-toohigh}}",
+	"securepoll-htmlform-date-toohigh": "Used as error message in HTML forms. Parameters:\n* $1 - maximum date\nSee also:\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-required}}\n* {{msg-mw|Securepoll-htmlform-date-invalid}}\n* {{msg-mw|Securepoll-htmlform-date-toolow}}",
+	"securepoll-htmlform-daterange-relative-layout": "Used to give context to the form fields in an HTML form date-range element.\n* $1 - HTML for the starting date control\n* $2 - HTML for the number-of-days control",
+	"securepoll-htmlform-daterange-absolute-layout": "Used to give context to the form fields in an HTML form date-range element.\n* $1 - HTML for the starting date control\n* $2 - HTML for the ending date control",
+	"securepoll-htmlform-daterange-days-badoption": "Used as error message in HTML forms.\n\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-required}}\n* {{msg-mw|Htmlform-int-invalid}}\n* {{msg-mw|Htmlform-int-toolow}}\n* {{msg-mw|Htmlform-int-toohigh}}\n* {{msg-mw|Securepoll-htmlform-date-invalid}}\n* {{msg-mw|Securepoll-htmlform-date-toolow}}\n* {{msg-mw|Securepoll-htmlform-date-toohigh}}\n* {{msg-mw|Securepoll-htmlform-daterange-invalid}}\n* {{msg-mw|Securepoll-htmlform-daterange-toolow}}\n* {{msg-mw|Securepoll-htmlform-daterange-toohigh}}",
+	"securepoll-htmlform-daterange-days-invalid": "Used as error message in HTML forms.\n\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-required}}\n* {{msg-mw|Htmlform-int-invalid}}\n* {{msg-mw|Htmlform-int-toolow}}\n* {{msg-mw|Htmlform-int-toohigh}}\n* {{msg-mw|Securepoll-htmlform-date-invalid}}\n* {{msg-mw|Securepoll-htmlform-date-toolow}}\n* {{msg-mw|Securepoll-htmlform-date-toohigh}}\n* {{msg-mw|Securepoll-htmlform-daterange-badoption}}\n* {{msg-mw|Securepoll-htmlform-daterange-toolow}}\n* {{msg-mw|Securepoll-htmlform-daterange-toohigh}}",
+	"securepoll-htmlform-daterange-days-toolow": "Used as error message in HTML forms. Parameters:\n* $1 - minimum value\nSee also:\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-required}}\n* {{msg-mw|Htmlform-int-invalid}}\n* {{msg-mw|Htmlform-int-toolow}}\n* {{msg-mw|Htmlform-int-toohigh}}\n* {{msg-mw|Securepoll-htmlform-date-invalid}}\n* {{msg-mw|Securepoll-htmlform-date-toolow}}\n* {{msg-mw|Securepoll-htmlform-date-toohigh}}\n* {{msg-mw|Securepoll-htmlform-daterange-badoption}}\n* {{msg-mw|Securepoll-htmlform-daterange-invalid}}\n* {{msg-mw|Securepoll-htmlform-daterange-toohigh}}",
+	"securepoll-htmlform-daterange-days-toohigh": "Used as error message in HTML forms. Parameters:\n* $1 - maximum value\nSee also:\n* {{msg-mw|Htmlform-invalid-input}}\n* {{msg-mw|Htmlform-required}}\n* {{msg-mw|Htmlform-int-invalid}}\n* {{msg-mw|Htmlform-int-toolow}}\n* {{msg-mw|Htmlform-int-toohigh}}\n* {{msg-mw|Securepoll-htmlform-date-invalid}}\n* {{msg-mw|Securepoll-htmlform-date-toolow}}\n* {{msg-mw|Securepoll-htmlform-date-toohigh}}\n* {{msg-mw|Securepoll-htmlform-daterange-badoption}}\n* {{msg-mw|Securepoll-htmlform-daterange-invalid}}\n* {{msg-mw|Securepoll-htmlform-daterange-toolow}}",
+	"securepoll-htmlform-radiorange-missing-message": "Used as error message in HTML forms. Parameters:\n* $1 - Column number",
+	"securepoll-htmlform-daterange-end-before-start": "Used as error message in HTML forms.",
+	"securepoll-htmlform-daterange-error-partial": "Used as error message in HTML forms.",
+	"securepoll-create-title": "Title for Special:SecurePoll/create.",
+	"securepoll-create-action": "Text for submit button on Special:SecurePoll/create.",
+	"securepoll-create-created": "Title for the page displayed after poll creation.",
+	"securepoll-create-created-text": "Text for the page displayed after poll creation.",
+	"securepoll-create-label-election_title": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-wiki": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-option-wiki-this_wiki": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-wiki-all_wikis": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-wiki-other_wiki": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-label-election_primaryLang": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-election_dates": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-layout-election_dates": "Layout message for the date range input on Special:SecurePoll/create. See {{msg-mw|securepoll-htmlform-daterange-layout}}. Parameters:\n* $1 - HTML for the starting date control\n* $2 - HTML for the number-of-days control",
+	"securepoll-create-label-election_disallow-change": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-election_return-url": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-election_type": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-election_crypt": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-property_admins": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-shuffle_questions": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-shuffle_options": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-must_rank_all": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-must_answer_all": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-gpg_encrypt_key": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-gpg_sign_key": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-questions": "Label for \"Questions\" section on Special:SecurePoll/create.",
+	"securepoll-create-questions-row-legend": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-questions-question": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-questions-add": "Label for button on Special:SecurePoll/create.",
+	"securepoll-create-label-questions-delete": "Label for button on Special:SecurePoll/create.",
+	"securepoll-create-label-min_score": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-max_score": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-default_score": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-column_order": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-option-column_order-asc": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-column_order-desc": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-label-column_label_msgs": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-questions-option": "Label for \"Options\" subsection for each question on Special:SecurePoll/create.",
+	"securepoll-create-label-options-option": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-options-add": "Label for button on Special:SecurePoll/create.",
+	"securepoll-create-label-options-delete": "Label for button on Special:SecurePoll/create.",
+	"securepoll-create-label-option-name": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-approval+plurality": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-preferential+schulze": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-choose+plurality": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-radio-range+plurality": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-radio-range+histogram-range": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-radio-range-comment+plurality": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-radio-range-comment+histogram-range": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_crypt-none": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_crypt-gpg": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-invalid-username": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-user-does-not-exist": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-fail-bad-dblist": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-duplicate-title": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-votereligibility-title": "Title for Special:SecurePoll/votereligibility/#",
+	"securepoll-votereligibility-redirect": "Text displayed when trying to edit a multi-wiki poll on the wrong wiki.\n\nParameters:\n* $1 - HTML of a link to the correct wiki. Displayed text is either the wiki name or {{msg-mw|securepoll-votereligibility-redirect-otherwiki}}",
+	"securepoll-votereligibility-redirect-otherwiki": "Used with {{msg-mw|securepoll-votereligibility-redirect}} when no name is available for the target wiki.",
+	"securepoll-votereligibility-basic": "Fieldset legend for the section of Special:SecurePoll/votereligibility dealing with basic eligibility criteria.",
+	"securepoll-votereligibility-basic-info": "Information displayed at the top of the section of Special:SecurePoll/votereligibility dealing with basic eligibility criteria.",
+	"securepoll-votereligibility-invalid-list": "Used as an error message on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-list-is-processing": "Used as an error message on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-min_edits": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-max_registration": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-not_blocked": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-not_centrally_blocked": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-central_block_threshold": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-not_bot": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-lists": "Fieldset legend for the section of Special:SecurePoll/votereligibility dealing with voter lists.",
+	"securepoll-votereligibility-lists-info": "Information displayed at the top of the section of Special:SecurePoll/votereligibility dealing with voter lists.",
+	"securepoll-votereligibility-list-voter": "Display name for the need-list list on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-list-include": "Display name for the include-list list on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-list-exclude": "Display name for the exclude-list list on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-inuse": "Text for form on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-notinuse": "Text for form on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-processing": "Text for form on Special:SecurePoll/votereligibility, showing completion status of the auto-population of the voter list.\n\nParameters:\n* $1 - Percentage\n* $2 - Number of users checked\n* $3 - Total number of users to be checked",
+	"securepoll-votereligibility-label-edit": "Label for link on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-clear": "Label for link on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-populate": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-edits_before": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-edits_before_count": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-edits_before_date": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-edits_between": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-edits_between_count": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-edits_between_dates": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-layout-edits_between_dates": "Message for laying out date-range fields on Special:SecurePoll/votereligibility.\n\nParameters:\n* $1 - HTML for start-date field\n* $2 - HTML for end-date field",
+	"securepoll-votereligibility-label-exclude_groups": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-include_groups": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-names": "Label for form field on Special:SecurePoll/votereligibility/#/edit/X.",
+	"securepoll-votereligibility-action": "Label for form submit button on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-fail-nothing-to-process": "Used as an error message on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-edit-title": "Title for Special:SecurePoll/votereligibility/#/edit/X",
+	"securepoll-votereligibility-edit-header": "Explanation displayed at the top of Special:SecurePoll/votereligibility/#/edit/X",
+	"securepoll-votereligibility-edit-action": "Label for form submit button on Special:SecurePoll/votereligibility/#/edit/X.",
+	"securepoll-votereligibility-saved": "Title for save confirmation page for Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-saved-text": "Text for save confirmation page for Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-clear-title": "Title for Special:SecurePoll/votereligibility/#/clear/X",
+	"securepoll-votereligibility-cleared": "Title for clear confirmation page for Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-cleared-text": "Text for clear confirmation page for Special:SecurePoll/votereligibility.",
+	"right-securepoll-create-poll": "{{doc-right|securepoll-create-poll}}",
+	"action-securepoll-create-poll": "{{Doc-action|securepoll-create-poll}}"
 }
