i18n: plural support for securepoll-create-layout-election_dates
- $2 is HTML code and cannot be used for PLURAL

Spotted by Robby
https://translatewiki.net/wiki/Thread:Support/About:MediaWiki:Securepoll-create-layout-election_dates/en

Change-Id: I56ae7f6b2bebef2a10153454aa7188525246a0f5

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -145,7 +145,7 @@
 	"securepoll-create-option-wiki-other_wiki": "Other specific wiki",
 	"securepoll-create-label-election_primaryLang": "Primary Language:",
 	"securepoll-create-label-election_dates": "Election Dates:",
-	"securepoll-create-layout-election_dates": "Start on $1 (at 00:00 UTC) and run for $2 days",
+	"securepoll-create-layout-election_dates": "Start on $1 (at 00:00 UTC) and run for $2 day(s)",
 	"securepoll-create-label-election_disallow-change": "Prevent voters from changing their votes",
 	"securepoll-create-label-election_return-url": "Return-to URL:",
 	"securepoll-create-label-election_type": "Poll type:",
