Add editing and logging and other general work
* (bug 71694) Allow for editing existing poll configuration.
* (bug 71695) Add a SecurePoll namespace (hidden behind a config
  variable) where poll configurations are dumped for logging purposes.
  This namespace uses a custom content handler to prevent direct
  editing.
* (bug 71693) Restore "none" encryption option, so entering a GPG
  encryption key is no longer required.
* Allow for static configuration of gpg-sign-key.
* Actually validate input GPG keys.
* CLI utility to delete a poll.

Bug: 71693
Bug: 71694
Bug: 71695
Change-Id: Ic975dc9a2fba2bf0cc9c4fb8ad4ed906458f76b4

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,6 +12,7 @@
 	"securepoll-invalid-election": "\"$1\" is not a valid election ID.",
 	"securepoll-welcome": "<strong>Welcome $1!</strong>",
 	"securepoll-not-started": "This election has not yet started.\nIt is scheduled to start on $2 at $3.",
+	"securepoll-already-started": "This election has already started.\nIt started on $2 at $3",
 	"securepoll-finished": "This election has finished, you can no longer vote.",
 	"securepoll-not-qualified": "You are not qualified to vote in this election: $1",
 	"securepoll-change-disallowed": "You have voted in this election before.\nSorry, you may not vote again.",
@@ -86,6 +87,7 @@
 	"securepoll-dump-no-urandom": "Cannot open /dev/urandom. \nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-urandom-not-supported": "This server does not support cryptographic random number generation.\nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-translate-title": "Translate: $1",
+	"securepoll-translate-label-comment": "Reason: ",
 	"securepoll-invalid-language": "Invalid language code \"$1\"",
 	"securepoll-header-trans-id": "ID",
 	"securepoll-submit-translate": "Update",
@@ -99,6 +101,7 @@
 	"securepoll-subpage-vote": "Vote",
 	"securepoll-subpage-translate": "Translate",
 	"securepoll-subpage-list": "List",
+	"securepoll-subpage-edit": "Edit",
 	"securepoll-subpage-votereligibility": "Voter Eligibility",
 	"securepoll-subpage-dump": "Dump",
 	"securepoll-subpage-tally": "Tally",
@@ -183,10 +186,17 @@
 	"securepoll-create-option-election_type-radio-range-comment+histogram-range": "Range voting (histogram range) with comment",
 	"securepoll-create-option-election_crypt-none": "No encryption",
 	"securepoll-create-option-election_crypt-gpg": "GPG",
+	"securepoll-create-label-comment": "Reason",
 	"securepoll-create-invalid-username": "The specified user name is not valid",
 	"securepoll-create-user-does-not-exist": "The specified user does not exist",
+	"securepoll-create-fail-bad-id": "The submitted election ID does not match the election being edited",
+	"securepoll-create-fail-id-missing": "The election being edited no longer exists",
 	"securepoll-create-fail-bad-dblist": "The specified wiki or wiki list is not valid",
 	"securepoll-create-duplicate-title": "The given poll title has already been used on $1",
+	"securepoll-edit-title": "{{int:securepoll}}: Edit poll",
+	"securepoll-edit-action": "Edit poll",
+	"securepoll-edit-edited": "{{int:securepoll}}: Poll edited",
+	"securepoll-edit-edited-text": "Your poll has been edited.",
 	"securepoll-votereligibility-title": "Voter eligibility configuration",
 	"securepoll-votereligibility-redirect": "Voter eligibility for this election must be configured on $1",
 	"securepoll-votereligibility-redirect-otherwiki": "the main wiki",
@@ -221,6 +231,7 @@
 	"securepoll-votereligibility-label-exclude_groups": "Exclude users in these groups",
 	"securepoll-votereligibility-label-include_groups": "Include users in these groups, regardless of edits or other groups",
 	"securepoll-votereligibility-label-names": "User names",
+	"securepoll-votereligibility-label-comment": "Reason",
 	"securepoll-votereligibility-action": "Save configuration",
 	"securepoll-votereligibility-fail-nothing-to-process": "Automatic population of the {{int:securepoll-votereligibility-list-voter}} was requested, but all filters were left blank.",
 	"securepoll-votereligibility-edit-title": "Voter list editing: $1",
@@ -231,6 +242,8 @@
 	"securepoll-votereligibility-clear-title": "Voter list removal: $1",
 	"securepoll-votereligibility-cleared": "{{int:securepoll}}: Cleared",
 	"securepoll-votereligibility-cleared-text": "The $1 has been cleared and will not be used by the poll.",
+	"securepoll-votereligibility-cleared-comment": "$1 cleared.",
 	"right-securepoll-create-poll": "Create polls",
-	"action-securepoll-create-poll": "create polls"
+	"action-securepoll-create-poll": "create polls",
+	"securepoll-ns-readonly": "The SecurePoll namespace is read-only"
 }
