--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -26,6 +26,7 @@
 	"securepoll-invalid-election": "Used as error message. Parameters:\n* $1 - invalid election ID",
 	"securepoll-welcome": "Used as welcome message for remote voters. Parameters:\n* $1 - username of remote voter\n{{Identical|Welcome}}",
 	"securepoll-not-started": "Parameters:\n* $1 - (Unused)\n* $2 - the date of it\n* $3 - its time",
+	"securepoll-already-started": "Parameters:\n* $1 - (Unused)\n* $2 - the date of it\n* $3 - its time",
 	"securepoll-not-qualified": "Unused at this time. Paramters:\n* $1 - ...",
 	"securepoll-submit": "{{Identical|Submit}}",
 	"securepoll-gpg-receipt": "Parameters:\n* $1 - the receipt. Format: \"SPID: (10-digit vote ID)\\n(encrypted vote record)\"\nIf the election doesn't use encryption, the following message is used:\n* {{msg-mw|securepoll-thanks}}",
@@ -78,6 +79,7 @@
 	"securepoll-dump-no-urandom": "Do not translate \"/dev/urandom\".\n\nServers running Microsoft Windows will present [[MediaWiki:Securepoll-urandom-not-supported/en|Securepoll-urandom-not-supported]] instead.",
 	"securepoll-urandom-not-supported": "As to the meaning of ''cryptographic random number'', see [[:wikipedia:Cryptographically secure pseudorandom number generator]] for reference.\n\nThe /dev/urandom cryptographic random number generation device is not supported on servers running Microsoft Windows. On other platforms the [[MediaWiki:Securepoll-dump-no-urandom/en|Securepoll-dump-no-urandom]] message is generated if opening of the /dev/urandom device fails.",
 	"securepoll-translate-title": "Used as page title. Parameters:\n* $1 - title of election\n{{Identical|Translate}}",
+	"securepoll-translate-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/translate.",
 	"securepoll-invalid-language": "Parameters:\n* $1 - language code",
 	"securepoll-header-trans-id": "{{optional}}\n{{Identical|ID}}",
 	"securepoll-submit-translate": "{{Identical|Update}}",
@@ -90,6 +92,7 @@
 	"securepoll-subpage-vote": "Link text to a sub page in the SecurePoll extension where users can vote.\n{{Identical|Vote}}",
 	"securepoll-subpage-translate": "Link text to a sub page in the SecurePoll extension where users can translate poll related texts.\n{{Identical|Translate}}",
 	"securepoll-subpage-list": "Link text to a sub page in the SecurePoll extension where users can list poll information.\n{{Identical|List}}",
+	"securepoll-subpage-edit": "Link text to a sub page in the SecurePoll extension where users can edit a poll configuration.",
 	"securepoll-subpage-votereligibility": "Link text to a sub page in the SecurePoll extension where users can configure voter eligibility.",
 	"securepoll-subpage-dump": "Link text to a sub page in the SecurePoll extension where users can dump results.\n{{Identical|Dump}}",
 	"securepoll-subpage-tally": "Link text to a sub page in the SecurePoll extension where users can tally.\n{{Identical|Tally}}",
@@ -163,7 +166,14 @@
 	"securepoll-create-invalid-username": "Used as error message in Special:SecurePoll/create.",
 	"securepoll-create-user-does-not-exist": "Used as error message in Special:SecurePoll/create.",
 	"securepoll-create-fail-bad-dblist": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-fail-bad-id": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-fail-id-missing": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/create.",
 	"securepoll-create-duplicate-title": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-edit-title": "Title for Special:SecurePoll/edit.",
+	"securepoll-edit-action": "Text for submit button on Special:SecurePoll/edit.\n{{Identical|Edit poll}}",
+	"securepoll-edit-edited": "Title for the page displayed after poll edit.",
+	"securepoll-edit-edited-text": "Text for the page displayed after poll edit.",
 	"securepoll-votereligibility-title": "Title for Special:SecurePoll/votereligibility/#",
 	"securepoll-votereligibility-redirect": "Text displayed when trying to edit a multi-wiki poll on the wrong wiki.\n\nParameters:\n* $1 - HTML of a link to the correct wiki. Displayed text is either the wiki name or {{msg-mw|securepoll-votereligibility-redirect-otherwiki}}",
 	"securepoll-votereligibility-redirect-otherwiki": "Used with {{msg-mw|securepoll-votereligibility-redirect}} when no name is available for the target wiki.",
@@ -198,6 +208,7 @@
 	"securepoll-votereligibility-label-exclude_groups": "Label for form field on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-label-include_groups": "Label for form field on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-label-names": "Label for form field on Special:SecurePoll/votereligibility/#/edit/X.\n{{Identical|Username}}",
+	"securepoll-votereligibility-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-action": "Label for form submit button on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-fail-nothing-to-process": "Used as an error message on Special:SecurePoll/votereligibility. Uses {{msg-mw|securepoll-votereligibility-list-voter}}.",
 	"securepoll-votereligibility-edit-title": "Title for Special:SecurePoll/votereligibility/#/edit/X",
@@ -208,6 +219,8 @@
 	"securepoll-votereligibility-clear-title": "Title for Special:SecurePoll/votereligibility/#/clear/X",
 	"securepoll-votereligibility-cleared": "Title for clear confirmation page for Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-cleared-text": "Text for clear confirmation page for Special:SecurePoll/votereligibility. $1 is a list name.",
+	"securepoll-votereligibility-cleared-comment": "Text used as the edit summary when clearing a list on Special:SecurePoll/votereligibility. $1 is a list name.",
 	"right-securepoll-create-poll": "{{doc-right|securepoll-create-poll}}",
-	"action-securepoll-create-poll": "{{Doc-action|securepoll-create-poll}}"
+	"action-securepoll-create-poll": "{{Doc-action|securepoll-create-poll}}",
+	"securepoll-ns-readonly": "Error message to inform the user that the SecurePoll namespace cannot be edited."
 }
