Redirect editing of jump wiki polls to central wiki
The code is already set up to assume this is being done,
so no good is likely to come of trying to edit the jump
wiki poll directly.

Change-Id: Ifb2952d46364b4a04a23cc95c8365b9ca3eed518

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -195,6 +195,8 @@
 	"securepoll-create-fail-bad-dblist": "The specified wiki or wiki list is not valid",
 	"securepoll-create-duplicate-title": "The given poll title has already been used on $1",
 	"securepoll-edit-title": "{{int:securepoll}}: Edit poll",
+	"securepoll-edit-redirect": "This election must be configured on $1",
+	"securepoll-edit-redirect-otherwiki": "the main wiki",
 	"securepoll-edit-action": "Edit poll",
 	"securepoll-edit-edited": "{{int:securepoll}}: Poll edited",
 	"securepoll-edit-edited-text": "Your poll has been edited.",
