Edit translations for all jump wikis on central wiki
Fortunately jump wikis don't have questions or options, so we only have
to worry about mapping the election's ID (which we do in the same way we
do elsewhere, by title lookup).

Bug: T74576
Change-Id: Ifcf2ac4b0f9544a3968df52c2f653f15ee2f6426

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -87,6 +87,8 @@
 	"securepoll-dump-no-urandom": "Cannot open /dev/urandom. \nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-urandom-not-supported": "This server does not support cryptographic random number generation.\nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-translate-title": "Translate: $1",
+	"securepoll-translate-redirect": "Messages for this election must be configured on $1",
+	"securepoll-translate-redirect-otherwiki": "the main wiki",
 	"securepoll-translate-label-comment": "Reason: ",
 	"securepoll-invalid-language": "Invalid language code \"$1\"",
 	"securepoll-header-trans-id": "ID",
