--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -80,6 +80,8 @@
 	"securepoll-dump-no-urandom": "Do not translate \"/dev/urandom\".\n\nServers running Microsoft Windows will present [[MediaWiki:Securepoll-urandom-not-supported/en|Securepoll-urandom-not-supported]] instead.",
 	"securepoll-urandom-not-supported": "As to the meaning of ''cryptographic random number'', see [[:wikipedia:Cryptographically secure pseudorandom number generator]] for reference.\n\nThe /dev/urandom cryptographic random number generation device is not supported on servers running Microsoft Windows. On other platforms the [[MediaWiki:Securepoll-dump-no-urandom/en|Securepoll-dump-no-urandom]] message is generated if opening of the /dev/urandom device fails.",
 	"securepoll-translate-title": "Used as page title. Parameters:\n* $1 - title of election\n{{Identical|Translate}}",
+	"securepoll-translate-redirect": "Text displayed when trying to edit messages for a multi-wiki poll on the wrong wiki.\n\nParameters:\n* $1 - HTML of a link to the correct wiki. Displayed text is either the wiki name or {{msg-mw|securepoll-translate-redirect-otherwiki}}",
+	"securepoll-translate-redirect-otherwiki": "Used with {{msg-mw|securepoll-translate-redirect}} when no name is available for the target wiki.",
 	"securepoll-translate-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/translate.\n{{Identical|Reason}}",
 	"securepoll-invalid-language": "Parameters:\n* $1 - language code",
 	"securepoll-header-trans-id": "{{optional}}\n{{Identical|ID}}",
