[SecurePoll] Replace deprecated sajax call with API module
Remove all references to ajax or sajax in SecurePoll

* Make ListPage::strike() formally public
* Add new strikevote API module (ApiStrikeVote) to replace old
  ListPage::ajaxStrike()
* Add api messages to en.json, qqq.json
* Register new API module in SecurePoll.php
* Replace sajax_do_call with an API call to strikevote
* Remove insecure document.getElementById( 'foo' ).innerHTML assignment

Bug: T55122
Change-Id: I1e4f3107e42ea19a6376f642c33ab767a534609e

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -20,7 +20,8 @@
 			"Liuxinyu970226",
 			"Lokal Profil",
 			"아라",
-			"Nemo bis"
+			"Nemo bis",
+			"Fhocutt (WMF)"
 		]
 	},
 	"securepoll": "Used in the following messages:\n* {{msg-mw|Securepoll-create-title}}\n* {{msg-mw|Securepoll-create-created}}\n* {{msg-mw|Securepoll-edit-title}}\n* {{msg-mw|Securepoll-edit-edited}}\n* {{msg-mw|Securepoll-votereligibility-saved}}\n* {{msg-mw|Securepoll-votereligibility-cleared}}",
@@ -230,5 +231,13 @@
 	"securepoll-votereligibility-cleared-comment": "Text used as the edit summary when clearing a list on Special:SecurePoll/votereligibility. $1 is a list name.\n{{Identical|Cleared}}",
 	"right-securepoll-create-poll": "{{doc-right|securepoll-create-poll}}",
 	"action-securepoll-create-poll": "{{Doc-action|securepoll-create-poll}}",
-	"securepoll-ns-readonly": "Error message to inform the user that the SecurePoll namespace cannot be edited."
+	"securepoll-ns-readonly": "Error message to inform the user that the SecurePoll namespace cannot be edited.",
+	"apihelp-strikevote-description": "{{doc-apihelp-description|strikevote}}",
+	"apihelp-strikevote-param-option": "{{doc-apihelp-param|strikevote|option}}",
+	"apihelp-strikevote-paramvalue-option-strike": "{{doc-apihelp-paramvalue|strikevote|option|strike}}",
+	"apihelp-strikevote-paramvalue-option-unstrike": "{{doc-apihelp-paramvalue|strikevote|option|unstrike}}",
+	"apihelp-strikevote-param-voteid": "{{doc-apihelp-param|strikevote|voteid}}",
+	"apihelp-strikevote-param-reason": "{{doc-apihelp-param|strikevote|reason}}",
+	"apihelp-strikevote-example-strike": "{{doc-apihelp-example|strikevote}}",
+	"apihelp-strikevote-example-unstrike": "{{doc-apihelp-example|strikevote}}"
 }
