--- a/i18n/en.json
+++ b/i18n/en.json
@@ -250,5 +250,13 @@
 	"securepoll-votereligibility-cleared-comment": "$1 cleared.",
 	"right-securepoll-create-poll": "Create polls",
 	"action-securepoll-create-poll": "create polls",
-	"securepoll-ns-readonly": "The SecurePoll namespace is read-only"
+	"securepoll-ns-readonly": "The SecurePoll namespace is read-only",
+	"apihelp-strikevote-description": "Allows admins to strike or unstrike a vote.",
+	"apihelp-strikevote-param-option": "Which action to take: strike or unstrike a vote.",
+	"apihelp-strikevote-paramvalue-option-strike": "Strike a vote (remove it from the count).",
+	"apihelp-strikevote-paramvalue-option-unstrike": "Unstrike a vote (restore it to the count).",
+	"apihelp-strikevote-param-voteid": "The ID of the vote to be struck or unstruck.",
+	"apihelp-strikevote-param-reason": "The reason for striking or unstriking the vote.",
+	"apihelp-strikevote-example-strike": "Strike vote <kbd>1</kbd>, giving the reason <kbd>duplication</kbd>.",
+	"apihelp-strikevote-example-unstrike": "Unstrike vote <kbd>1</kbd>, giving the reason <kbd>mistake</kbd>."
 }
