--- a/i18n/en.json
+++ b/i18n/en.json
@@ -250,7 +250,7 @@
 	"securepoll-votereligibility-cleared-comment": "$1 cleared.",
 	"right-securepoll-create-poll": "Create polls",
 	"action-securepoll-create-poll": "create polls",
-	"securepoll-ns-readonly": "The SecurePoll namespace is read-only",
+	"securepoll-ns-readonly": "The {{ns:SecurePoll}} namespace is read-only",
 	"apihelp-strikevote-description": "Allows admins to strike or unstrike a vote.",
 	"apihelp-strikevote-param-option": "Which action to take: strike or unstrike a vote.",
 	"apihelp-strikevote-paramvalue-option-strike": "Strike a vote (remove it from the count).",
