--- a/i18n/en.json
+++ b/i18n/en.json
@@ -254,6 +254,8 @@
 	"right-securepoll-create-poll": "Create polls",
 	"action-securepoll-create-poll": "create polls",
 	"securepoll-ns-readonly": "The {{ns:SecurePoll}} namespace is read-only",
+	"securepoll-voter-stats": "Out of all eligible voters, $1 {{PLURAL:$1|voter has|voters have}} voted.",
+	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck.",
 	"apihelp-strikevote-description": "Allows admins to strike or unstrike a vote.",
 	"apihelp-strikevote-param-option": "Which action to take: strike or unstrike a vote.",
 	"apihelp-strikevote-paramvalue-option-strike": "Strike a vote (remove it from the count).",
