--- a/i18n/en.json
+++ b/i18n/en.json
@@ -83,8 +83,7 @@
 	"securepoll-header-admin": "Admin",
 	"securepoll-cookie-dup-list": "Cookie duplicate users",
 	"securepoll-dump-title": "Dump: $1",
-	"securepoll-dump-no-crypt": "No encrypted election record is available for this election, because the election is not configured to use encryption.",
-	"securepoll-dump-not-finished": "Encrypted election records are only available after the finish date on $1 at $2",
+	"securepoll-dump-not-finished": "Election records are only available after the finish date on $1 at $2",
 	"securepoll-dump-no-urandom": "Cannot open /dev/urandom. \nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-dump-private": "Sorry, viewing the encrypted record dump for this election is restricted to election administrators.",
 	"securepoll-urandom-not-supported": "This server does not support cryptographic random number generation.\nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
