Don't use jquery.ui.datepicker in SecurePoll
Bug: T147136
Change-Id: I23304d9a9861323bc77dd64d4f4bea6e191e2700

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -128,18 +128,7 @@
 	"securepoll-round": "Round $1",
 	"securepoll-spoilt": "(Spoilt)",
 	"securepoll-exhausted": "(Exhausted)",
-	"securepoll-htmlform-date-placeholder": "YYYY-MM-DD",
-	"securepoll-htmlform-date-invalid": "The value you specified is not a recognized date. Try using YYYY-MM-DD format.",
-	"securepoll-htmlform-date-toolow": "The value you specified is before the earliest allowed date of $1.",
-	"securepoll-htmlform-date-toohigh": "The value you specified is after the latest allowed date of $1.",
-	"securepoll-htmlform-daterange-relative-layout": "Start on $1 and run for $2 days",
-	"securepoll-htmlform-daterange-absolute-layout": "Start on $1 and end on $2",
-	"securepoll-htmlform-daterange-days-badoption": "The value you specified for the number of days to run is not a valid option.",
-	"securepoll-htmlform-daterange-days-invalid": "The value you specified for the number of days to run is not an integer.",
-	"securepoll-htmlform-daterange-days-toolow": "The value you specified for the number of days to run is below the minimum of {{PLURAL:$1|$1}}.",
-	"securepoll-htmlform-daterange-days-toohigh": "The value you specified for the number of days to run is above the maximum of {{PLURAL:$1|$1}}.",
 	"securepoll-htmlform-daterange-end-before-start": "The end date given is before the start date.",
-	"securepoll-htmlform-daterange-error-partial": "Both date fields must be filled or left empty.",
 	"securepoll-htmlform-radiorange-missing-message": "Please specify a value for column $1",
 	"securepoll-create-title": "{{int:securepoll}}: Create poll",
 	"securepoll-create-action": "Create poll",
@@ -151,8 +140,8 @@
 	"securepoll-create-option-wiki-all_wikis": "All wikis",
 	"securepoll-create-option-wiki-other_wiki": "Other specific wiki",
 	"securepoll-create-label-election_primaryLang": "Primary Language:",
-	"securepoll-create-label-election_dates": "Election Dates:",
-	"securepoll-create-layout-election_dates": "Start on $1 (at 00:00 UTC) and run for $2 day(s)",
+	"securepoll-create-label-election_startdate": "Election Start Date:",
+	"securepoll-create-label-election_duration": "Election Duration (Days):",
 	"securepoll-create-label-election_disallow-change": "Prevent voters from changing their votes",
 	"securepoll-create-label-election_return-url": "Return-to URL:",
 	"securepoll-create-label-election_jump-text": "Jump text:",
@@ -234,8 +223,8 @@
 	"securepoll-votereligibility-label-edits_before_date": "Before date",
 	"securepoll-votereligibility-label-edits_between": "Require a minimum number of edits between two dates",
 	"securepoll-votereligibility-label-edits_between_count": "Minimum edit count",
-	"securepoll-votereligibility-label-edits_between_dates": "Between dates",
-	"securepoll-votereligibility-layout-edits_between_dates": "Between $1 and $2",
+	"securepoll-votereligibility-label-edits_startdate": "Edits on or after:",
+	"securepoll-votereligibility-label-edits_enddate": "And before:",
 	"securepoll-votereligibility-label-exclude_groups": "Exclude users in these groups",
 	"securepoll-votereligibility-label-include_groups": "Include users in these groups, regardless of edits or other groups",
 	"securepoll-votereligibility-label-names": "User names",
