Form section headers in SecurePoll should not use wikitext or html
Bug: T147960
Change-Id: Id9153763d8744900c326c2650fa1fd053d162815

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -208,7 +208,7 @@
 	"securepoll-votereligibility-title": "Voter eligibility configuration",
 	"securepoll-votereligibility-redirect": "Voter eligibility for this election must be configured on $1",
 	"securepoll-votereligibility-redirect-otherwiki": "the main wiki",
-	"securepoll-votereligibility-basic": "'''Basic options'''",
+	"securepoll-votereligibility-basic": "Basic options",
 	"securepoll-votereligibility-basic-info": "Basic options are checked when the user attempts to vote.",
 	"securepoll-votereligibility-invalid-list": "The given voter eligibility list is not known.",
 	"securepoll-votereligibility-list-is-processing": "The given voter eligibility list is being automatically populated, and cannot be edited now.",
@@ -218,7 +218,7 @@
 	"securepoll-votereligibility-label-not_centrally_blocked": "Must not be blocked on too many attached wikis",
 	"securepoll-votereligibility-label-central_block_threshold": "Central block threshold",
 	"securepoll-votereligibility-label-not_bot": "Must not be flagged as a bot",
-	"securepoll-votereligibility-lists": "'''Voter lists'''",
+	"securepoll-votereligibility-lists": "Voter lists",
 	"securepoll-votereligibility-lists-info": "Eligible voters may also be listed explicitly. There are three lists:\n* The ''{{int:securepoll-votereligibility-list-voter}}'' is a list of voters who are allowed to vote, if they also meet the basic requirements defined above. This list is often populated automatically.\n* The ''{{int:securepoll-votereligibility-list-include}}'' is a list of voters who are allowed to vote regardless of the basic requirements or the eligibility list.\n* The ''{{int:securepoll-votereligibility-list-exclude}}'' is a list of voters who are not allowed to vote, regardless of any other lists.",
 	"securepoll-votereligibility-list-voter": "Eligibility list",
 	"securepoll-votereligibility-list-include": "Override list",
